--- a/config.yml
+++ b/config.yml
@@ -2,8 +2,8 @@
 
 
 docker:
-  registry: "docker.jajachina.com"
-  registry_prefix : "docker.jajachina.com/jaja"
+  registry: "docker.demo.com"
+  registry_prefix : "docker.demo.com/demo"
   default_push: false
   expose_port: 8080
 
