--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,10 @@
 docker:
   registry: registry.cn-shanghai.aliyuncs.com
-  registry_prefix: docker.jajachina.com/jaja
+  registry_prefix: docker.test.com/jaja
   default_push: false
   expose_port: 8080
   username: test
-  password: 123456
+  password: test
 server:
   host: 0.0.0.0
   port: 8000
