--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "debugpy",
       "request": "launch",
       "module": "uvicorn",
-      "python": "${workspaceFolder}/.venv/bin/python",
+      "python": "${command:python.interpreterPath}",
       "args": [
         "backend.app:app",
         "--reload",
@@ -29,7 +29,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/backend/app.py",
-      "python": "${workspaceFolder}/.venv/bin/python",
+      "python": "${command:python.interpreterPath}",
       "console": "integratedTerminal",
       "justMyCode": true,
       "cwd": "${workspaceFolder}",
@@ -42,7 +42,7 @@
       "type": "debugpy",
       "request": "launch",
       "program": "${workspaceFolder}/backend/app_dev.py",
-      "python": "${workspaceFolder}/.venv/bin/python",
+      "python": "${command:python.interpreterPath}",
       "console": "integratedTerminal",
       "justMyCode": false,
       "cwd": "${workspaceFolder}",
