--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install-deps": "npm install"
   },
   "dependencies": {
     "@codemirror/lang-yaml": "^6.1.2",
